# laba2sem3

./: AlphabetIndex.h  ArraySequence.h  BinaryTree.h  CMakeLists.txt  Dictionary.h  Histogram.h  Interface.h  LinkedList.h  LinkedListSequence.h  Person.h  Sequence.h  SparceVector.h  Tests.cpp  main.cpp
